@@ -45,10 +45,15 @@ and &lt;<a href="http://www.czyborra.com/utf">http://www.czyborra.com/utf</a>&gt
 <p><span style="font-style: italic;"></span><span
  style="text-decoration: underline; font-style: italic; font-weight: bold;">Important
 note 2:</span> due to the new USB hand-helds, the folder &amp; variable
-names are not always encoded as 'raw' any longer.<br>
-The varname can be encoded as raw/TI8x-charset (TI8x), TI9x-charset
-(TI9x) or pseudo UTF-8 (TI84+ USB &amp; Titanium USB). The real string
-type depends on the calculator model and relies on ticonv conversion
+names are not always encoded as 'raw' any longer for now. The tifiles2
+library use the 'Ti-File varname encoding' for varnames (see ticonv
+library documentation: the varname can be encoded as raw/TI8x-charset
+(TI8x), TI9x-charset
+(TI9x) or pseudo UTF-8 (TI84+ USB &amp; Titanium USB)). <br>
+</p>
+<p>The real string
+type depends on the calculator model passed by tifiles_set_tve() and
+relies on ticonv conversion
 routines to be handled fine (eg to you have to convert it with <a
  href="../../../ticonv/docs/html/tokens.c.html#ticonv_varname_to_utf8">ticonv_varname_to_utf8/utf16</a>
 before displaying it or <a
