@@ -11,6 +11,9 @@ To do:
 
 Log:
 
+- 06/08/2006, version 0.2.3: roms
+	- target hand-held is passed by tifiles_content_create_xxxx
+
 - 12/07/2006, version 0.2.2: roms
 	- variables like 'beta' can't be handled by TiGroup file nor ZIP archives.
 	Translate filenames again!
